--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           wget https://services.gradle.org/distributions/gradle-7.6-bin.zip
           unzip gradle-7.6-bin.zip
           sudo mv gradle-7.6 /opt/gradle
-          sudo ln -s /opt/gradle/bin/gradle /usr/bin/gradle
+          sudo ln -sf /opt/gradle/bin/gradle /usr/bin/gradle  # ✅ gunakan -sf
 
       - name: Run tests
         env:
