--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    permissions:
+      contents: write  # dibutuhkan oleh GitHub Pages
+
     services:
       selenium:
         image: seleniarm/standalone-chromium
@@ -35,15 +38,21 @@ jobs:
           wget https://services.gradle.org/distributions/gradle-7.6-bin.zip
           unzip gradle-7.6-bin.zip
           sudo mv gradle-7.6 /opt/gradle
-          sudo ln -sf /opt/gradle/bin/gradle /usr/bin/gradle  # ✅ gunakan -sf
+          sudo ln -sf /opt/gradle/bin/gradle /usr/bin/gradle
 
       - name: Run tests
         env:
           SELENIUM_REMOTE_URL: http://localhost:4444/wd/hub
         run: gradle clean test
 
-      - name: Upload test results
+      - name: Upload test results (artifact)
         uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: build/test-results/test
+
+      - name: Deploy HTML test report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build/reports/tests/test
